contains background image, about me text, about me image

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,10 +7,25 @@
     <script src="script.js"></script>
   </head>
   <body>
+    <div id="header_text">
+        <h1>Smruthi Balajee</h1>
+        <p>Welcome to my portfolio!</p>
+    </div>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
+      <h2>About Me</h2>
+      <img src="images/smruthi_face.JPG" width="200" height="200"/>
+      <p>Hi! I'm a rising junior studying CS at UC Berkeley, with an emphasis in data engineering. 
+          I am particularly interested in the applications of artificial intelligence and machine learning 
+          in engineering solutions to problems, but am always excited to explore new fields! I also love teaching CS 
+          and am really passionate about making the subject accessible to all!</p>
+      <p>In my free time, I love to 3D model cool designs using Autodesk Inventor and make amateur artwork out of 
+          recycled wires, gears, and resistors. Last year, I took apart an old printer to make a small art installation 
+          for my wall! I also enjoy hiking, biking (especially spin), and eating chocolate. :) Once, I finished a Trader 
+          Joe's pound plus chocolate bar in four days. (It was during dead week, so no regrets!) </p>
+      <p>Currently I'm working on developing a love for running long distances. I can't wait to get past the pain and 
+          finally achieve the famous "runner's high"! On a more technical note, I'm expanding my software engineering 
+          skills as a STEP Intern at Google for Summer 2020.</p>
+      <p>Click here to see a random photo:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
