--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,43 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Karla&family=Montaga&family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <script src="script.js"></script>
-  </head>
-  <body onload="writeName()"> 
-      <div id="navbar">
-        <a href="#home">Home</a>
-        <a href="#about-me">About Me</a>
-        <a href="#contact">Contact</a>
-    </div>
-    <section id="home">
-        <div id="hero-image">
-            <div id="hero-text"></div>
-            <div id="button-container"><button class="button" onclick="writeGreeting()">Welcome to my portfolio</button></div>
-            <div id="greeting-container"></div>
+    <head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <title>My Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Karla&family=Montaga&family=Montserrat:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
+        <script src="script.js"></script>
+    </head>
+    <body onload="writeName()">
+        <div id="navbar">
+            <a href="#home">Home</a>
+            <a href="#about-me">About Me</a>
+            <a href="#contact">Contact</a>
         </div>
-    </section>
-    <div id="content">
-        <div class="wrapper">
-            <section id="about-me">
-                <h2>About Me</h2>
-                <img src="images/smruthi_face.JPG" width="200" height="200"/>
-                <p>Hi! I'm a rising junior studying CS at UC Berkeley, with an emphasis in data engineering. 
-                    I am particularly interested in the applications of artificial intelligence and machine learning 
-                    in engineering solutions to problems, but am always excited to explore new fields! I also love teaching CS 
-                    and am really passionate about making the subject accessible to all!</p>
-                <p>In my free time, I love to 3D model cool designs using Autodesk Inventor and make amateur artwork out of 
-                    recycled wires, gears, and resistors. Last year, I took apart an old printer to make a small art installation 
-                    for my wall! I also enjoy hiking, biking (especially spin), and eating chocolate. :) Once, I finished a Trader 
-                    Joe's pound plus chocolate bar in four days. (It was during dead week, so no regrets!) </p>
-                <p>Currently I'm working on developing a love for running long distances. I can't wait to get past the pain and 
-                    finally achieve the famous "runner's high"! On a more technical note, I'm expanding my software engineering 
-                    skills as a STEP Intern at Google for Summer 2020.</p>
-            </section>
+        <section id="home">
+            <div id="hero-image">
+                <div id="hero-text"></div>
+                <div id="button-container"><button class="button" onclick="writeGreeting()">Welcome to my portfolio</button></div>
+                <div id="greeting-container"></div>
+            </div>
+        </section>
+        <div id="content">
+            <div class="wrapper">
+                <section id="about-me">
+                    <div class="about-title-container">
+                        <img src="images/full_leaf.png" width="325" height="150"/>
+                        <div class ="about-title-text">About Me</div>
+                    </div>
+                    <div class="about-image-container">
+                        <img src="images/smruthi_face.JPG" onmouseover="this.src='images/smruthi_thumbs.JPG'" onmouseout="this.src='images/smruthi_face.JPG'" height="400" width="400">
+                    </div>
+                    <div class="about-text-container">    
+                        <div id="about-text">
+                            <p>Hi! I'm a rising junior studying CS at UC Berkeley, with an emphasis in data engineering. 
+                                I am particularly interested in the applications of artificial intelligence and machine learning 
+                                in engineering solutions to problems, but am always excited to explore new fields! I also love teaching CS 
+                                and am really passionate about making the subject accessible to all!</p>
+                            <p>In my free time, I love to 3D model cool designs using Autodesk Inventor and make amateur artwork out of 
+                                recycled wires, gears, and resistors. Last year, I took apart an old printer to make a small art installation 
+                                for my wall! I also enjoy hiking, biking (especially spin), and eating chocolate. :) Once, I finished a Trader 
+                                Joe's pound plus chocolate bar in four days. (It was during dead week, so no regrets!) </p>
+                            <p>Currently I'm working on developing a love for running long distances. I can't wait to get past the pain and 
+                                finally achieve the famous "runner's high"! On a more technical note, I'm expanding my software engineering 
+                                skills as a STEP Intern at Google for Summer 2020.</p>
+                        </div>
+                    </div>
+                </section>
+            </div>
         </div>
-    </div>
-  </body>
+    </body>
 </html>
