Contact button on nav bar links to my email, added link to linkedin in about me

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     </head>
     <body onload="writeName()">
         <div id="navbar">
-            <a href="#contact">Contact</a>
+            <a href = "mailto: smruthibalajee@berkeley.edu">Contact</a>
             <a href="#projects">Projects</a>
             <a href="#about-me">About Me</a>
             <a href="#home">Home</a>
@@ -43,7 +43,8 @@
                                 Joe's pound plus chocolate bar in four days. (It was during dead week, so no regrets!) </p>
                             <p>Currently I'm working on developing a love for running long distances. I can't wait to get past the pain and 
                                 finally achieve the famous "runner's high"! On a more technical note, I'm expanding my software engineering 
-                                skills as a STEP Intern at Google for Summer 2020.</p>
+                                skills as a STEP Intern at Google for Summer 2020. Feel free to message me on <a href="https://linkedin.com/in/smruthibalajee/">LinkedIn</a> or contact me at 
+                                smruthibalajee@berkeley.edu to say hello!<p>
                         </div>
                     </div>
                 </section>
