basic website features are complete: added 2 more projects, contact links

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -65,6 +65,18 @@
                             <p>Enigma Machine [java]: Designed, wrote, and tested code that can encrypt and decrypt a message given an alphabet and specific permutation cycle, like the Enigma machine used in WWII.</p>
                         </div>
                     </div>
+                    <div class="proj-3-container">
+                        <img src="images/map.png" height="200" width="200" class= "responsive">   
+                        <div id="proj-text">
+                            <p>Web-Browser Based Mapping Application [java]: Built an artificial intelligence using the Google Maps API that can solve arbitrary state space traversal problems.</p>
+                        </div>
+                    </div>
+                    <div class="proj-4-container">
+                        <img src="images/tile_game.png" height="200" width="200" class= "responsive">   
+                        <div id="proj-text">
+                            <p>2D Tile-based World Exploration Engine [java]: Designed, built, and presented an interactive game world that randomly generates worlds given a seed value.</p>
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
