welcome button has been modified to fetch data from server and display

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,7 +17,7 @@
         <section id="home">
             <div id="hero-image">
                 <div id="hero-text"></div>
-                <div id="button-container"><button class="button" onclick="writeGreeting()">Welcome to my portfolio</button></div>
+                <div id="button-container"><button class="button" onclick="fetchAndWriteHello()">Welcome to my portfolio</button></div>
                 <div id="greeting-container"></div>
             </div>
         </section>
