--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,9 +7,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Karla&family=Montaga&family=Montserrat:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
         <script src="script.js"></script>
     </head>
-    <body onload="writeName()">
+    <body onload="writeName(); fetchAndDisplayComments();">
         <div id="navbar">
             <a href = "mailto: smruthibalajee@berkeley.edu">Contact</a>
+            <a href="#comment">Comment</a>
             <a href="#projects">Projects</a>
             <a href="#about-me">About Me</a>
             <a href="#home">Home</a>
@@ -17,7 +18,7 @@
         <section id="home">
             <div id="hero-image">
                 <div id="hero-text"></div>
-                <div id="button-container"><button class="button" onclick="fetchAndDisplayJSON()">Welcome to my portfolio</button></div>
+                <div id="button-container"><button class="button" onclick="writeGreeting()">Welcome to my portfolio</button></div>
                 <div id="greeting-container"></div>
             </div>
         </section>
@@ -77,6 +78,30 @@
                             <p>2D Tile-based World Exploration Engine [java]: Designed, built, and presented an interactive game world that randomly generates worlds given a seed value.</p>
                         </div>
                     </div>
+                </section>
+                <section id="comment">
+                    <form action="/data" method="POST">
+                        <p>Enter your name:</p>
+                        <textarea name="name-input"></textarea>
+                        <br/><br/>
+
+                        <p>Pick the category that best represents you:</p>
+                        <input type="checkbox" name="student" value="true"> Student
+                        <br/>
+                        <input type="checkbox" name="industry-professional" value="true"> Industry Professional
+                        <br/>
+                        <input type="checkbox" name="recruiter" value="true"> Recruiter
+                        <br/>
+                        <input type="checkbox" name="other" value="true"> Other
+                        <br/><br/>
+
+                        <p>I'd love to hear your thoughts:</p>
+                        <textarea name="comment-input"></textarea>
+                        <br/><br/>
+
+                        <input type="submit" />
+                    </form>
+                    <div id="comments-container"></div>
                 </section>
             </div>
         </div>
