--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,30 +54,38 @@
                         <img src="images/full_leaf.png" width="325" height="150" class= "responsive"/>
                         <div class ="proj-title-text">Projects</div>
                     </div>
-                    <div class="proj-1-container">
-                        <img src="images/gitlogo.png" height="200" width="200" class= "responsive">   
-                        <div id="proj-text">
-                            <p>Version Control System [java]: Designed, implemented, and tested a version control system with similar functionality to git. Includes features like committing, branching, and merging.</p>
+                    <a href="https://inst.eecs.berkeley.edu/~cs61b/fa19/materials/proj/proj3/index.html" style="text-decoration: none;">
+                        <div class="proj-1-container">
+                            <img src="images/gitlogo.png" height="200" width="200" class= "responsive">   
+                            <div id="proj-text">
+                                <p>Version Control System [java]: Designed, implemented, and tested a version control system with similar functionality to git. Includes features like committing, branching, and merging.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="proj-2-container">
-                        <img src="images/basic-enigma.jpg" height="200" width="200" class= "responsive">   
-                        <div id="proj-text">
-                            <p>Enigma Machine [java]: Designed, wrote, and tested code that can encrypt and decrypt a message given an alphabet and specific permutation cycle, like the Enigma machine used in WWII.</p>
+                    </a>
+                    <a href="https://inst.eecs.berkeley.edu/~cs61b/fa19/materials/proj/proj1/index.html" style="text-decoration: none;">
+                        <div class="proj-2-container">
+                            <img src="images/basic-enigma.jpg" height="200" width="200" class= "responsive">   
+                            <div id="proj-text">
+                                <p>Enigma Machine [java]: Designed, wrote, and tested code that can encrypt and decrypt a message given an alphabet and specific permutation cycle, like the Enigma machine used in WWII.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="proj-3-container">
-                        <img src="images/map.png" height="200" width="200" class= "responsive">   
-                        <div id="proj-text">
-                            <p>Web-Browser Based Mapping Application [java]: Built an artificial intelligence using the Google Maps API that can solve arbitrary state space traversal problems.</p>
+                    </a>
+                    <a href="https://sp19.datastructur.es/materials/proj/proj2c/proj2c" style="text-decoration: none;">
+                        <div class="proj-3-container">
+                            <img src="images/map.png" height="200" width="200" class= "responsive">   
+                            <div id="proj-text">
+                                <p>Web-Browser Based Mapping Application [java]: Built an artificial intelligence using the Google Maps API that can solve arbitrary state space traversal problems.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="proj-4-container">
-                        <img src="images/tile_game.png" height="200" width="200" class= "responsive">   
-                        <div id="proj-text">
-                            <p>2D Tile-based World Exploration Engine [java]: Designed, built, and presented an interactive game world that randomly generates worlds given a seed value.</p>
+                    </a>
+                    <a href="https://sp19.datastructur.es/materials/proj/proj3/proj3" style="text-decoration: none;">
+                        <div class="proj-4-container">
+                            <img src="images/tile_game.png" height="200" width="200" class= "responsive">   
+                            <div id="proj-text">
+                                <p>2D Tile-based World Exploration Engine [java]: Designed, built, and presented an interactive game world that randomly generates worlds given a seed value.</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </section>
                 <section id="comment">
                     <form action="/data" method="POST">
@@ -100,9 +108,10 @@
                         <br/><br/>
 
                         <input type="submit" />
-
+                        <br/><br/>
                     </form>
                     <form action="/data" method="GET">
+                        <br/><br/>
                         <label for="num-comments">Number of displayed comments:</label>
                         <select id="num-comments" name="num-comments" onchange="fetchAndDisplayNumComments(this.value)">
                             <option value="5">5</option>
@@ -110,6 +119,7 @@
                             <option value="15">15</option>
                             <option value="30">30</option>
                         </select>
+                        <br/><br/>
                     </form>
                     <div id="comments-container">
                     </div>
