adds fully functional chart to webpage that showcases skills

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,6 +5,7 @@
         <title>My Portfolio</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Karla&family=Montaga&family=Montserrat:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
+        <script src="https://www.gstatic.com/charts/loader.js"></script>
         <script src="script.js"></script>
     </head>
     <body onload="writeName(); fetchAndDisplayNumComments('5');">
@@ -131,6 +132,8 @@
                     </div>
                     <div id="comments-container"></div>
                 </section>
+                <div id="chart-container"></div>
+                <div id="toggle-button"><button id="b1" class="button2"></button></div>
             </div>
         </div>
     </body>
