--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,12 +6,14 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Karla&family=Montaga&family=Montserrat:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
         <script src="https://www.gstatic.com/charts/loader.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDziCUo2dhp1wSWJcWEz5B8v-nQnlfY20"></script>
         <script src="script.js"></script>
     </head>
     <body onload="writeName(); fetchAndDisplayNumComments('5');">
         <div id="navbar">
             <a href = "mailto: smruthibalajee@berkeley.edu">Contact</a>
             <a href="#comment">Comments</a>
+            <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#about-me">About Me</a>
             <a href="#home">Home</a>
@@ -88,6 +90,10 @@
                         </div>
                     </a>
                 </section>
+                <section id="skills">
+                    <div id="chart-container"></div>
+                    <div id="toggle-button"><button id="b1" class="button2"></button></div>
+                </section>
                 <section id="comment">
                     <div class="comment-title-container">
                         <img src="images/full_leaf.png" width="325" height="150" class= "responsive"/>
@@ -132,8 +138,6 @@
                     </div>
                     <div id="comments-container"></div>
                 </section>
-                <div id="chart-container"></div>
-                <div id="toggle-button"><button id="b1" class="button2"></button></div>
             </div>
         </div>
     </body>
