Fixes style, simplifies doPost calls in DataServlet

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -126,7 +126,7 @@
                             <label for="location-input">Where are you from?</label>
                             <input list="countries" name="location-input" id="location-input">
                             <datalist id="countries">
-                                <option value="Afganistan">Afghanistan</option>
+                                <option value="Afghanistan">Afghanistan</option>
                                 <option value="Albania">Albania</option>
                                 <option value="Algeria">Algeria</option>
                                 <option value="American Samoa">American Samoa</option>
@@ -240,7 +240,7 @@
                                 <option value="Kenya">Kenya</option>
                                 <option value="Kiribati">Kiribati</option>
                                 <option value="Korea North">Korea North</option>
-                                <option value="Korea Sout">Korea South</option>
+                                <option value="Korea South">Korea South</option>
                                 <option value="Kuwait">Kuwait</option>
                                 <option value="Kyrgyzstan">Kyrgyzstan</option>
                                 <option value="Laos">Laos</option>
@@ -278,7 +278,7 @@
                                 <option value="Nauru">Nauru</option>
                                 <option value="Nepal">Nepal</option>
                                 <option value="Netherland Antilles">Netherland Antilles</option>
-                                <option value="Netherlands">Netherlands (Holland, Europe)</option>
+                                <option value="Netherlands (Holland, Europe)">Netherlands (Holland, Europe)</option>
                                 <option value="Nevis">Nevis</option>
                                 <option value="New Caledonia">New Caledonia</option>
                                 <option value="New Zealand">New Zealand</option>
@@ -296,7 +296,7 @@
                                 <option value="Papua New Guinea">Papua New Guinea</option>
                                 <option value="Paraguay">Paraguay</option>
                                 <option value="Peru">Peru</option>
-                                <option value="Phillipines">Philippines</option>
+                                <option value="Phillippines">Philippines</option>
                                 <option value="Pitcairn Island">Pitcairn Island</option>
                                 <option value="Poland">Poland</option>
                                 <option value="Portugal">Portugal</option>
@@ -356,7 +356,7 @@
                                 <option value="Uganda">Uganda</option>
                                 <option value="United Kingdom">United Kingdom</option>
                                 <option value="Ukraine">Ukraine</option>
-                                <option value="United Arab Erimates">United Arab Emirates</option>
+                                <option value="United Arab Emirates">United Arab Emirates</option>
                                 <option value="United States of America">United States of America</option>
                                 <option value="Uraguay">Uruguay</option>
                                 <option value="Uzbekistan">Uzbekistan</option>
