--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,12 +11,17 @@
     </head>
     <body onload="onloadInit()">
         <div id="navbar">
-            <a href = "mailto: smruthibalajee@berkeley.edu">Contact</a>
-            <a href="#comment">Comments</a>
-            <a href="#skills">Skills</a>
-            <a href="#projects">Projects</a>
-            <a href="#about-me">About Me</a>
-            <a href="#home">Home</a>
+            <div id="right">
+                <a href = "mailto: smruthibalajee@berkeley.edu">Contact</a>
+                <a href="#comment">Comments</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#about-me">About Me</a>
+                <a href="#home">Home</a>
+            </div>
+            <div id="left">
+                <a id="loginButton"></a>
+            </div>
         </div>
         <section id="home">
             <div id="hero-image">
